# randomstuff

GraphicsEngine/: CMakeLists.txt
GraphicsEngine/Sources/: main.cpp  run
GraphicsEngine/Sources/GraphicsEngine/: Application.cpp  Application.h  Camera.cpp  Camera.h  Component.h  GUI.cpp  GUI.h  GUIElement.h  GraphicsEngine.cpp  GraphicsEngine.h  GraphicsEngineFabric.cpp  GraphicsEngineFabric.h  Input.cpp  Input.h  Light.h  Math.h  MathUtils.h  Matrix4x4.h  Object.cpp  Object.h  Ray.h  RaycastHit.h  RenderTexture.cpp  RenderTexture.h  Scene.cpp  Scene.h  SceneUtils.h  Texture2D.cpp  Texture2D.h  TextureFilterMode.h  TextureWrapMode.h  Time.h  Transform.cpp  Transform.h  Vector3.cpp  Vector3.h  Vector4.h
GraphicsEngine/Sources/GraphicsEngine/GraphicsApi/: FixedFunctionPipelineImpl.h  GraphicsDeviceImpl.h  GraphicsEngineContext.h  GraphicsEngineFabricImpl.h  GraphicsEngineImpl.h  MaterialImpl.h  MeshImpl.h  PixelShaderImpl.h  RenderTextureImpl.h  Texture2DImpl.h  TextureImpl.cpp  TextureImpl.h  TextureSamplerImpl.h  VertexShaderImpl.h
GraphicsEngine/Sources/GraphicsEngine/GraphicsApi/DirectX11/: DX11.h  DX11ConstantBuffer.cpp  DX11ConstantBuffer.h  DX11GUI.cpp  DX11GUI.h  DX11GraphicsDevice.cpp  DX11GraphicsDevice.h  DX11GraphicsEngine.cpp  DX11GraphicsEngine.h  DX11GraphicsEngineContext.h  DX11GraphicsEngineFabric.cpp  DX11GraphicsEngineFabric.h  DX11Material.cpp  DX11Material.h  DX11Mesh.cpp  DX11Mesh.h  DX11PixelShader.cpp  DX11PixelShader.h  DX11RenderTexture.cpp  DX11RenderTexture.h  DX11Texture2D.cpp  DX11Texture2D.h  DX11TextureSampler.cpp  DX11TextureSampler.h  DX11VertexShader.cpp  DX11VertexShader.h
GraphicsEngine/Sources/GraphicsEngine/GraphicsApi/DirectX9/: DX9.h  DX9Convert.h  DX9FixedFunctionPipeline.cpp  DX9FixedFunctionPipeline.h  DX9GUI.cpp  DX9GUI.h  DX9GraphicsDevice.cpp  DX9GraphicsDevice.h  DX9GraphicsEngine.cpp  DX9GraphicsEngine.h  DX9GraphicsEngineContext.h  DX9Material.cpp  (+15 more)
GraphicsEngine/Sources/GraphicsEngine/Internal/: GraphicsDevice.cpp  GraphicsDevice.h  InternalApplication.cpp  InternalApplication.h  InternalGUI.cpp  InternalGUI.h  InternalInput.cpp  InternalInput.h  ObjectStorage.cpp  ObjectStorage.h
GraphicsEngine/Sources/GraphicsEngine/Materials/: Material.cpp  Material.h  MaterialDiffuse.cpp  MaterialDiffuse.h  MaterialSand.cpp  MaterialSand.h  MaterialTask01.cpp  MaterialTask01.h  MaterialTask02Cube.cpp  MaterialTask02Cube.h  MaterialTask02Cylinder.cpp  MaterialTask02Cylinder.h  MaterialUnlit.cpp  MaterialUnlit.h  MaterialUnlitSimple.cpp  MaterialUnlitSimple.h
GraphicsEngine/Sources/GraphicsEngine/Meshes/: Mesh.cpp  Mesh.h  MeshCube.cpp  MeshCylinder.cpp  MeshObjFile.cpp  MeshObjFile.h  MeshPlane.cpp  MeshPlane.h  MeshQuad.cpp  MeshSphere.cpp
GraphicsEngine/Sources/GraphicsEngine/PlatformApi/: Platform.h
GraphicsEngine/Sources/Shaders/DX11/: ShaderUnlit.fx  ShaderUnlitSimple.fx
GraphicsEngine/Sources/Shaders/DX9/: ShaderDiffuse.ps  ShaderUnlit.vs
GraphicsEngine/Sources/Shaders/GL20/: ShaderSand.fs  ShaderSand.vs  ShaderTask02Cube.vs  ShaderTask02Cylinder.vs  ShaderUnlit.vs
GraphicsEngine/Sources/Tasks/: CameraController.h  FpsCounter.h  ObjectRotator.h  Task.h  Task01.h  Task02.h  Task03.h  Task04.h  Task05_01.h  Task05_02.h  Task05_03.h  Task06.h  Task07.h  Task08.h
GraphicsEngine/vs2010/: vs2010.sln  vs2010.vcxproj  vs2010.vcxproj.filters
Task01/Task1_GL20/Sources/: a.out  main.cpp  task1
Task01/Task1_GL20/include/glm/: CMakeCache.txt  Makefile  cmake_install.cmake  glm_dummy
Task01/Task1_GL20/vs2010/: vs2010.vcxproj.filters
Task1_psv/: CMakeLists.txt  main.cpp
net_lab4_REST/: build.gradle  settings.gradle
net_lab4_REST/gradle/wrapper/: gradle-wrapper.properties
net_lab4_REST/messages/: messages.json
opengl_lab1/: CMakeLists.txt
opp_lab3/: CMakeLists.txt  main.c
opp_lab4/: CMakeLists.txt  main.c  test  testres.txt  xx
opp_lab5/: CMakeLists.txt  main.c  result.txt
(+39 files in other folders)
